# computational-intelligence

./: .gitignore  pyproject.toml
CODE/: 03setcovering.ipynb  03setcovering.py
LABS/: Lab 01 - A star.pptx
PROJECT/: quoridor.py  tests.py
